--- a/src/mkdocs.yml
+++ b/src/mkdocs.yml
@@ -1,5 +1,6 @@
-site_name: 'Tinkoff Invest API Documentation'
+site_name: 'Тинькофф Инвестиции OpenApi'
 docs_dir: docs
+repo_url: https://github.com/TinkoffCreditSystems/invest-openapi
 theme:
   name: material
   language: 'ru'
