--- a/src/mkdocs.yml
+++ b/src/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: 'Тинькофф Инвестиции OpenApi'
+site_name: 'Тинькофф Инвестиции OpenAPI'
 docs_dir: docs
 repo_url: https://github.com/TinkoffCreditSystems/invest-openapi
 theme:
